--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@types/showdown": "^2.0.6",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "n-readlines": "^1.0.1",
